<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_configuration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kimerasoft_ec.alpuzzle.ConfigurationActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvLevel"
        android:text="@string/level"
        />
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spnLevel"
        ></Spinner>
    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/tvRows"
        android:text="@string/rows"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_width="match_parent"
        android:id="@+id/etRows"
        android:enabled="false"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/tvColumns"
        android:text="@string/columns"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_width="match_parent"
        android:id="@+id/etColumns"
        android:enabled="false"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="right"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            android:id="@+id/btnAccept"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/btnCancel"
            />
    </LinearLayout>
</LinearLayout>
</RelativeLayout>
